Closed
Bug 754046
Opened 13 years ago
Closed 13 years ago
"ASSERTION: mRequiredRadioCount about to wrap below 0!" with radio root
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: jruderman, Assigned: mounir)
Details
(Keywords: assertion, testcase)
Attachments
(3 files, 1 obsolete file)
1. Load the testcase.
2. Quit Firefox.
Result: An assertion fails during cycle collection.
###!!! ASSERTION: mRequiredRadioCount about to wrap below 0!: 'radioGroup->mRequiredRadioCount != 0', file content/base/src/nsDocument.cpp, line 6617
This is a "regression" from bug 750370 (before which the assertion was a noop).
| Reporter | ||
Comment 1•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
OS: Mac OS X → All
Hardware: x86_64 → All
| Assignee | ||
Comment 2•13 years ago
|
||
I have no idea why |GetParent()| was checked before.
Unfortunately, we need to trigger the GC to write a test and the only tests that would fail with asserts are reftests/crashtests which don't allow GC to be triggered AFAIK.
Comment 3•13 years ago
|
||
Comment on attachment 623232 [details] [diff] [review]
Patch v1
This patch just rearranges the comments and moves the 'notify' init. Based on comment 2. shouldn't something happen here with GetParent() ?
Attachment #623232 -
Flags: review?(bzbarsky) → review-
| Assignee | ||
Comment 4•13 years ago
|
||
Arg... I changed the patch to see what I could do to test it and I forgot to revert that change.
This is the real patch I wanted to attach ;)
Attachment #623232 -
Attachment is obsolete: true
Attachment #623434 -
Flags: review?(bzbarsky)
Comment 5•13 years ago
|
||
Comment on attachment 623434 [details] [diff] [review]
Patch
That makes way more sense. r=me
Attachment #623434 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Updated•13 years ago
|
Target Milestone: --- → mozilla15
| Assignee | ||
Updated•13 years ago
|
Attachment #623434 -
Flags: checkin+
Comment 6•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•