Bug 754046 - Fix "ASSERTION: mRequiredRadioCount about to wrap below 0!". r=bz